@@ -1,2 +1,4 @@
 2016-10-04 Fred Gleason <fredg@paravelsystems.com>
 	* Initial package creation.
+2016-10-04 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented basic algorithm in 'src/ntpmodem.cpp'.
